# bq_to_dynamo

./: README.md  pyproject.toml  sample_transfer.yaml
bq_to_dynamo/: __main__.py  app.py  transfer_config.py  utils.py
